# realtime-voice-ai-lab

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: events.py  logging.py  main.py  pipeline.py  storage.py  timing.py
backend/tests/: test_events.py  test_health.py  test_metrics.py  test_pipeline.py  test_storage.py  test_timing.py  test_verify_runtime.py
docs/: DEMO.md  LOCAL_MODELS.md  PRD.md  PUBLIC_DEMO.md  REALTIME_SPIKE.md  VALIDATION.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: events.ts
scripts/: setup_local.sh  verify_runtime.py
