[project]
name = "realtime-voice-ai-lab-backend"
version = "0.1.0"
description = "FastAPI backend for the Realtime Voice AI Reliability Lab"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
